--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@ h1 {
 h2 {
 	font-family: 'Roboto Slab', serif;
 	font-size: 2em;
+	text-transform: capitalize;
 }
 
 input {
@@ -67,4 +68,10 @@ input[type="submit"]:hover, input[type="button"]:hover {
 	position: absolute;
 	top: 10px;
 	left: 10px;
+}
+
+@media screen and (max-width: 1000px) {
+	h1 {
+		margin-top: 100px;
+	}
 }
